--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <a href="">VIEW MORE</a>
     </div>
 
-    <div style="width:100%; background-image:url(./images/images.jpeg);padding: 7%; height:300px; background-position: center;
+    <div class="div6" style="width:100%; background-image:url(./images/images.jpeg);padding: 7%;  background-position: center;
     background-repeat: no-repeat;background-size: cover;">
     <h1 style="color: white;">
         MANAGE YOUR LEGACY</h1>
